@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20160428] [svn: r697]
+Changelog for sg3_utils-1.43 [20160429] [svn: r698]
   - sg_senddiag: add --timeout=SEC option
   - sg_sanitize: add --timeout=SEC option
   - sg_format: add --timeout=SEC option
@@ -22,6 +22,7 @@ Changelog for sg3_utils-1.43 [20160428] [svn: r697]
     - add --force option to bypass checking supported
       vpd pages page and fetch requested page directly
   - sg_reassign+sg_write_same: fix ULONG_MAX problem
+  - sg_rdac: add sanity checks for -f=lun value
   - sg_turs+sg_requests: make both accept '--num=NUM'
     and '--number=NUM' for mutual compatibility
   - sg_zone: fix debug cdb naming
